Pedidos,  y Descuentos nombre ultimo item

--- a/ProyectoCaC/pages/descuentos.html
+++ b/ProyectoCaC/pages/descuentos.html
@@ -74,6 +74,7 @@
       
     </div>
     <div class="contenedor-hijo">
+      <ol>Micro Omnibus Primera Junta- Linea 324</ol>
       <li><strong>10% de descuento en medicamentos en caja</strong></li>
       <li>Presentando credencial</li>
       <li>No aplica a perfumería y accesorios</li>
