--- a/ProyectoCaC/pages/pedidos.html
+++ b/ProyectoCaC/pages/pedidos.html
@@ -56,42 +56,42 @@
         <img src="../img/producto1.jpg" alt="Producto 1" width="50%" height="50%">
         <h3>Actron</h3>
         <p>Antiinflamatorio no esteroideo para aliviar el dolor y la fiebre.</p>
-        <p>Precio: 1000$</p>
+        <p>Precio: $1000</p>
         <button>Comprar</button>
     </div>
     <div class="producto">
         <img src="../img/producto2.jpg" alt="Producto 2" width="50%" height="50%">
         <h3>Paracetamol</h3>
         <p>Analgésico y antipirético para reducir la fiebre y aliviar el dolor.</p>
-        <p>Precio: 700$</p>
+        <p>Precio: $700</p>
         <button>Comprar</button>
     </div>
     <div class="producto">
         <img src="../img/producto3.jpg" alt="Producto 3" width="50%" height="50%">
         <h3>Aspirina</h3>
         <p>Alivia el dolor, reduce la fiebre y preveiene la formación de coágulos sanguíneos.</p>
-        <p>Precio: 1000$</p>
+        <p>Precio: $1000</p>
         <button>Comprar</button>
     </div>
     <div class="producto">
         <img src="../img/producto4.jpg" alt="Producto 4" width="50%" height="50%">
         <h3>Aerotina</h3>
         <p>Antihistamínico para aliviar los síntomas de las alergias, como la congestión nasal.</p>
-        <p>Precio: 500$</p>
+        <p>Precio: $500</p>
         <button>Comprar</button>
     </div>
     <div class="producto">
         <img src="../img/producto5.jpg" alt="Producto 5" width="50%" height="50%">
         <h3>Alernix</h3>
         <p>Antihistamínico para tratar las alergias y sus síntomas</p>
-        <p>Precio: 400$</p>
+        <p>Precio: $400</p>
         <button>Comprar</button>
     </div>
     <div class="producto">
         <img src="../img/producto6.jpg" alt="Producto 6" width="50%" height="50%">
         <h3>Ranitidina</h3>
         <p>Para reducir la acidez estomacal y el reflujo ácido.</p>
-        <p>Precio: 1200$</p>
+        <p>Precio: $1200</p>
         <button>Comprar</button>
     </div>
 </div>
