Arreglo de bootstrap y comentarios

--- a/ProyectoCaC/pages/api.html
+++ b/ProyectoCaC/pages/api.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+  
+<!-- Nav bar -->
 <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
   <div class=" container-fluid">
     <a class="navbar-brand" href="../index.html"><img src="../img/home.png"></a>
@@ -42,10 +44,14 @@
     </div>
   </div>
 </nav>
+
+<!-- Encabezado -->
 <header class="centrado">
     <h1 class="centrado" id="animacionhome">Formulario de Contacto</h1>
-  </header>
-    <form id="contactForm">
+</header>
+
+<!-- Formulario para contactarnos -->
+<form id="contactForm">
       <label for="nombre">Nombre:</label>
       <input type="text" id="nombre" name="nombre" required><br>
 
@@ -56,23 +62,24 @@
       <textarea id="mensaje" name="mensaje" rows="4" required></textarea><br>
 
       <button type="submit">Enviar</button>
-    </form>
+</form>
+<script src="validacion.js"></script>
 
-    <script src="validacion.js"></script>
-
-    <footer>
+<!-- Footer -->
+<footer>
       <p>© Copyright 2023</p>
       <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
       <p>Horarios de atencion: Lunes a Viernes de 8:00 a 12:30 y 16:30 a 20:00 hs. Sábados 9:00 a 12:30 y 16:30 a 20:00 hs</p>
       <p>Tel:(02229)493789 email: fcialaplaza@c3l.com.ar
         <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img
             src="../img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
-    </footer>
+</footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"></script>
+<!-- Script de bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+crossorigin="anonymous"></script>
 
-  </body>
+</body>
 
 </html>
