--- a/ProyectoCaC/pages/descuentos.html
+++ b/ProyectoCaC/pages/descuentos.html
@@ -11,10 +11,10 @@
   <link rel="stylesheet" href="../css/style.css">
 </head>
 
-
 <body>
 
-  <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark"">
+<!-- Nav bar -->
+<nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark"">
     <div class=" container-fluid">
   <a class="navbar-brand" href="../index.html"><img src="../img/home.png"></a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -43,11 +43,15 @@
   </div>
   </div>
 </nav>
+
+<!-- Encabezado -->
 <header>
   <h1 class="centrado">Descuentos Exclusivos</h1>
   <h2 class="subtitulo">Convenios únicos par cuidar tu bolsillo.</h2>
 </header>
-  <div class="contenedor-padre">
+
+<!-- Grid con informacion de descuento -->
+<div class="contenedor-padre">
     <div class="contenedor-hijo">
       <ol>Parque industrial Cir2</ol>
       <li><strong>20% de descuento en medicamentos en caja</strong></li>
@@ -80,25 +84,31 @@
       <li>No acumulable con otros descuentos
         de obra social.</li>
     </div>
-  </div>
+</div>
 
-  <div class="fondo-verde">
+<div class="fondo-verde">
   <h2>¿Queres que tus empleados obtengan beneficios?</h2><br>
   <p>Si sos empleador y le queres dar un beneficio a tu empleado, para que accedan a descuentos exclusivos, te damos las
     herramientas para que puedas lograrlo!<br>
     Comunicate con nosostros para que te contemos cómo acceder al beneficio.</p>
-  </div>
+</div>
 
-  <footer>
+<!-- Footer -->
+<footer>
     <p>© Copyright 2023</p>
     <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
     <p>Horarios de atencion: Lunes a Viernes de 8:00 a 12:30 y 16:30 a 20:00 hs. Sábados 9:00 a 12:30 y 16:30 a 20:00 hs</p>
     <p>Tel:(02229)493789 email:fcialaplaza@c3l.com.ar
       <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img
           src="../img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
-  </footer>
-</body>
+</footer>
 
+<!-- Script de bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+crossorigin="anonymous"></script>
+  
+</body>
 
 </html>
 
