--- a/ProyectoCaC/index.html
+++ b/ProyectoCaC/index.html
@@ -13,7 +13,8 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
+<!-- Nav Bar -->
+<nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
     <div class="container-fluid"> 
       <a class="navbar-brand" href="index.html"><img src="img/home.png"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -41,12 +42,16 @@
         </ul>
       </div>
     </div>
-  </nav>
-  <header>
+</nav>
+
+<!-- Encabezado de HTML  -->
+<header>
     <h1 class="centrado">Farmacia Plaza la Carolina</h1>
     <h2 class="subtitulo">La Farmacia de tu confianza</h2>
-  </header>
-  <main class="fondo-verde">
+</header>
+
+<!-- Contenido de lectura de la farmacia  -->
+<main class="fondo-verde">
     <div>
       <h3> Nuestra historia</h3>
       <h4>Conocenos...</h4>
@@ -91,19 +96,22 @@
 
       </p>
     </div>
-  </main>
-  <footer>
+</main>
+
+<!-- Footer  -->
+<footer>
     <p>© Copyright 2023</p>
     <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
     <p>Horarios de atencion: Lunes a Viernes de 8:00 a 12:30 y 16:30 a 20:00 hs. Sábados 9:00 a 12:30 y 16:30 a 20:00 hs</p>
     <p>Tel:(02229)493789 email: fcialaplaza@c3l.com.ar
       <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img
           src="../ProyectoCaC/img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487</p>
-  </footer>
+</footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
+<!-- Script de bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+crossorigin="anonymous"></script>
   
 </body>
 
