--- a/ProyectoCaC/pages/pedidos.html
+++ b/ProyectoCaC/pages/pedidos.html
@@ -10,7 +10,10 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
+
+  <!-- Nav Bar -->
 <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
     <div class=" container-fluid">
   <a class="navbar-brand" href="../index.html"><img src="../img/home.png"></a>
@@ -43,15 +46,14 @@
   </div>
 </nav>
 
-
-  <div id="colores">
-  <header>
+<!-- Encabezado -->
+<header>
     <h1 class="centrado">PEDIDOS ONLINE</h1>
     <h2 class="centrado">Cargás la receta y te lo llevamos.</h2>
-  </header>
+</header>
 
-  
-  <div class="catalogo">
+  <!-- Catalogo de compras  -->
+<div class="catalogo">
     <div class="producto">
         <img src="../img/producto1.jpg" alt="Producto 1" width="50%" height="50%">
         <h3>Actron</h3>
@@ -96,6 +98,7 @@
     </div>
 </div>
 
+<!-- Formulario de pedidos  -->
 <div class="formulario-pedido">
     <h2>Formulario de Pedido</h2>
     <form action="#" method="post">
@@ -122,7 +125,8 @@
     </form>
 </div>
 
-  <div class="margenes">
+<!-- Pedidos por Whatsapp -->
+<div class="margenes">
 
 
   <p>ENVIAS TU PEDIDO POR WHATSAPP <br>
@@ -135,21 +139,23 @@
   <p>Pedí por <a class="redsoc" href="https://wa.me/541154110787?text=Gracias por contactarnos, por favor cargá la receta y en breve nos estamos comunicando"
       target="_blank"><img src="../img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
   </p></a>
-  </div>
+</div>
 
-
-  <footer>
+<!-- Footer  -->
+<footer>
     <p>© Copyright 2023</p>
     <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
     <p>Horarios de atencion: Lunes a Viernes de 8:00 a 12:30 y 16:30 a 20:00 hs. Sábados 9:00 a 12:30 y 16:30 a 20:00 hs</p>
     <p>Tel:(02229)493789 email: fcialaplaza@c3l.com.ar
       <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img
           src="../img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
-  </footer>
+</footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
+  
+<!-- Script de bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+crossorigin="anonymous"></script>
 
 </body>
 
