Agregado de imagenes con flexbox

--- a/ProyectoCaC/pages/llegar.html
+++ b/ProyectoCaC/pages/llegar.html
@@ -45,16 +45,22 @@
 
 <!-- Encabezado -->
 <header>
-
-    <h1 class="centrado">Cómo llegar a nuestro local</h1>
-    <p class="centrado-parrafo">C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
+<div class="flex-container">
+    <div><img src="../img/comollegar.png" width="150"></div>
+      <div>
+      <h1 class="centrado">Cómo llegar a nuestro local</h1>
+      <p class="centrado-parrafo">C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
+      </div>
+</div>
 </header>
 
 <!-- Imagen con dirección de la farmacia -->
-<div class="centrar-imagen">
+<div class="contenedor"
+<img class="borde-imagen">
     <a href="https://www.google.com/maps/place/Farmacia+Plaza+La+Carolina+S.C.S./@-34.8722199,-58.2113619,15z/data=!3m1!4b1!4m10!1m2!2m1!1sfarmacia+plaza+carolina!3m6!1s0x95a2d78361fc4327:0x4a3eb5bb7d8c282f!8m2!3d-34.8722389!4d-58.1929079!15sChdmYXJtYWNpYSBwbGF6YSBjYXJvbGluYVoZIhdmYXJtYWNpYSBwbGF6YSBjYXJvbGluYZIBCHBoYXJtYWN54AEA!16s%2Fg%2F1tf6szmb?entry=ttu"><img
         src="../img/llegar.jpeg" alt="Imagen de direccion" width="800"></a>
-</div>
+    </img>
+  </div>
 
 <!-- Footer -->
 <footer>
