--- a/ProyectoCaC/pages/pedidos.html
+++ b/ProyectoCaC/pages/pedidos.html
@@ -53,7 +53,7 @@
 </header>
 
   <!-- Catalogo de compras  -->
-<div class="catalogo">
+<div class="catalogo" id="colores">
     <div class="producto">
         <img src="../img/producto1.jpg" alt="Producto 1" width="50%" height="50%">
         <h3>Actron</h3>
@@ -99,7 +99,7 @@
 </div>
 
 <!-- Formulario de pedidos  -->
-<div class="formulario-pedido">
+<div class="formulario-pedido" id="colores">
     <h2>Formulario de Pedido</h2>
     <form action="#" method="post">
         <label for="producto">Producto:</label>
