--- a/ProyectoCaC/pages/api.html
+++ b/ProyectoCaC/pages/api.html
@@ -46,24 +46,26 @@
 </nav>
 
 <!-- Encabezado -->
-<header class="centrado">
-    <h1 class="centrado" id="animacionhome">Formulario de Contacto</h1>
+<header>
+    <h1>Formulario de Contacto</h1>
 </header>
 
 <!-- Formulario para contactarnos -->
+<div class="flex-container">
+  <div> <img src="../img/cruzverde.png" width="300"> </div>
+<div>
 <form id="contactForm">
       <label for="nombre">Nombre:</label>
       <input type="text" id="nombre" name="nombre" required><br>
-
       <label for="email">Correo Electrónico:</label>
       <input type="email" id="email" name="email" required><br>
-
       <label for="mensaje">Mensaje:</label>
       <textarea id="mensaje" name="mensaje" rows="4" required></textarea><br>
-
       <button type="submit">Enviar</button>
 </form>
-<script src="validacion.js"></script>
+</div>
+<div> <img src="../img/cruzverde.png" width="300"> </div>
+</div>
 
 <!-- Footer -->
 <footer>
@@ -79,6 +81,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
 crossorigin="anonymous"></script>
+
+<!-- Script de JS -->
+<script src="validacion.js"></script>
 
 </body>
 
