--- a/ProyectoCaC/pages/descuentos.html
+++ b/ProyectoCaC/pages/descuentos.html
@@ -46,8 +46,18 @@
 
 <!-- Encabezado -->
 <header>
-  <h1 class="centrado">Descuentos Exclusivos</h1>
-  <h2 class="subtitulo">Convenios únicos par cuidar tu bolsillo.</h2>
+<div class="flex-container">
+  <div>
+  <img id="animacion"src="../img/signodolar.png" width="200">
+  </div> 
+    <div>
+    <h1 class="centrado">Descuentos Exclusivos</h1>
+    <h2 class="subtitulo">Convenios únicos par cuidar tu bolsillo.</h2>
+    </div>
+      <div>
+      <img id="animacion"src="../img/signodolar.png" width="200">
+      </div>
+</div>
 </header>
 
 <!-- Grid con informacion de descuento -->
