--- a/ProyectoCaC/pages/descuentos.html
+++ b/ProyectoCaC/pages/descuentos.html
@@ -14,39 +14,40 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark"">
+  <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
     <div class=" container-fluid">
-  <a class="navbar-brand" href="../index.html"><img src="../img/home.png"></a>
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="../pages/pedidos.html">Pedidos Online<img
-            src="../img/carritocompra.png"></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../pages/llegar.html">Cómo llegar<img src="../img/direccion.png"></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../pages/descuentos.html">Descuentos Exclusivos<img src="../img/banco.png"></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="../pages/api.html">Contactanos<img src="../img/contacto.png"></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" aria-disabled="true">X</a>
-      </li>
-    </ul>
-  </div>
-  </div>
-</nav>
-<header>
-  <h1 class="centrado">Descuentos Exclusivos</h1>
-  <h2 class="subtitulo">Convenios únicos par cuidar tu bolsillo.</h2>
-</header>
+    <a class="navbar-brand" href="../index.html"><img src="../img/home.png"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="../pages/pedidos.html">Pedidos Online<img
+              src="../img/carritocompra.png"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/llegar.html">Cómo llegar<img src="../img/direccion.png"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/descuentos.html">Descuentos Exclusivos<img src="../img/banco.png"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="../pages/api.html">Contactanos<img
+              src="../img/contacto.png"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">X</a>
+        </li>
+      </ul>
+    </div>
+    </div>
+  </nav>
+  <header>
+    <h1 class="centrado">Descuentos Exclusivos</h1>
+    <h2 class="subtitulo">Convenios únicos par cuidar tu bolsillo.</h2>
+  </header>
   <div class="contenedor-padre">
     <div class="contenedor-hijo">
       <ol>Parque industrial Cir2</ol>
@@ -71,7 +72,7 @@
       <li>No aplica a perfumería y accesorios</li>
       <li>No acumulable con otros descuentos
         de obra social.</li>
-      
+
     </div>
     <div class="contenedor-hijo">
       <ol>Micro Omnibus Primera Junta- Linea 324</ol>
@@ -84,25 +85,23 @@
   </div>
 
   <div class="fondo-verde">
-  <h2>¿Queres que tus empleados obtengan beneficios?</h2><br>
-  <p>Si sos empleador y le queres dar un beneficio a tu empleado, para que accedan a descuentos exclusivos, te damos las
-    herramientas para que puedas lograrlo!<br>
-    Comunicate con nosostros para que te contemos cómo acceder al beneficio.</p>
+    <h2>¿Queres que tus empleados obtengan beneficios?</h2><br>
+    <p>Si sos empleador y le queres dar un beneficio a tu empleado, para que accedan a descuentos exclusivos, te damos
+      las
+      herramientas para que puedas lograrlo!<br>
+      Comunicate con nosostros para que te contemos cómo acceder al beneficio.</p>
   </div>
 
   <footer>
     <p>© Copyright 2023</p>
     <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
-    <p>Horarios de atencion: Lunes a Viernes de 8:00 a 12:30 y 16:30 a 20:00 hs. Sábados 9:00 a 12:30 y 16:30 a 20:00 hs</p>
+    <p>Horarios de atencion: Lunes a Viernes de 8:00 a 12:30 y 16:30 a 20:00 hs. Sábados 9:00 a 12:30 y 16:30 a 20:00 hs
+    </p>
     <p>Tel:(02229)493789 email:fcialaplaza@c3l.com.ar
-      <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img
-          src="../img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
+      <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img src="../img/whatsapp-line.png"
+          class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
   </footer>
 </body>
 
 
 </html>
-
-
-
-
