--- a/ProyectoCaC/pages/llegar.html
+++ b/ProyectoCaC/pages/llegar.html
@@ -12,35 +12,36 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark"">
+  <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark"">
     <div class=" container-fluid">
-  <a class="navbar-brand" href="../index.html"><img src="../img/home.png"></a>
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="../pages/pedidos.html">Pedidos Online<img
-            src="../img/carritocompra.png"></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../pages/llegar.html">Cómo llegar<img src="../img/direccion.png"></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../pages/descuentos.html">Descuentos Exclusivos<img src="../img/banco.png"></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="../pages/api.html">Contactanos<img src="../img/contacto.png"></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" aria-disabled="true">X</a>
-      </li>
-    </ul>
-  </div>
-  </div>
-</nav>
+    <a class="navbar-brand" href="../index.html"><img src="../img/home.png"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="../pages/pedidos.html">Pedidos Online<img
+              src="../img/carritocompra.png"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/llegar.html">Cómo llegar<img src="../img/direccion.png"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/descuentos.html">Descuentos Exclusivos<img src="../img/banco.png"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="../pages/api.html">Contactanos<img
+              src="../img/contacto.png"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">X</a>
+        </li>
+      </ul>
+    </div>
+    </div>
+  </nav>
 
   <header>
 
@@ -48,16 +49,19 @@
     <p class="centrado-parrafo">C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
   </header>
   <div class="centrar-imagen">
-    <a href="https://www.google.com/maps/place/Farmacia+Plaza+La+Carolina+S.C.S./@-34.8722199,-58.2113619,15z/data=!3m1!4b1!4m10!1m2!2m1!1sfarmacia+plaza+carolina!3m6!1s0x95a2d78361fc4327:0x4a3eb5bb7d8c282f!8m2!3d-34.8722389!4d-58.1929079!15sChdmYXJtYWNpYSBwbGF6YSBjYXJvbGluYVoZIhdmYXJtYWNpYSBwbGF6YSBjYXJvbGluYZIBCHBoYXJtYWN54AEA!16s%2Fg%2F1tf6szmb?entry=ttu"><img
+    <a
+      href="https://www.google.com/maps/place/Farmacia+Plaza+La+Carolina+S.C.S./@-34.8722199,-58.2113619,15z/data=!3m1!4b1!4m10!1m2!2m1!1sfarmacia+plaza+carolina!3m6!1s0x95a2d78361fc4327:0x4a3eb5bb7d8c282f!8m2!3d-34.8722389!4d-58.1929079!15sChdmYXJtYWNpYSBwbGF6YSBjYXJvbGluYVoZIhdmYXJtYWNpYSBwbGF6YSBjYXJvbGluYZIBCHBoYXJtYWN54AEA!16s%2Fg%2F1tf6szmb?entry=ttu"><img
         src="../img/llegar.jpeg" alt="Imagen de direccion" width="800"></a>
   </div>
-    <footer>
-      <p>© Copyright 2023</p>
-      <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
-      <p>Horarios de atencion: Lunes a Viernes de 8:00 a 12:30 y 16:30 a 20:00 hs. Sábados 9:00 a 12:30 y 16:30 a 20:00 hs</p>
-      <p>Tel:(02229)493789 email: fcialaplaza@c3l.com.ar
-        <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img
-            src="../img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
-    </footer>
+  <footer>
+    <p>© Copyright 2023</p>
+    <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
+    <p>Horarios de atencion: Lunes a Viernes de 8:00 a 12:30 y 16:30 a 20:00 hs. Sábados 9:00 a 12:30 y 16:30 a 20:00 hs
+    </p>
+    <p>Tel:(02229)493789 email: fcialaplaza@c3l.com.ar
+      <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img src="../img/whatsapp-line.png"
+          class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
+  </footer>
 </body>
+
 </html>
