--- a/ProyectoCaC/pages/pedidos.html
+++ b/ProyectoCaC/pages/pedidos.html
@@ -10,103 +10,105 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
-<nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
+  <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
     <div class=" container-fluid">
-  <a class="navbar-brand" href="../index.html"><img src="../img/home.png"></a>
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
+      <a class="navbar-brand" href="../index.html"><img src="../img/home.png"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
 
-        <a class="nav-link active" aria-current="page" href="../pages/pedidos.html">Pedidos Online<img
-            src="../img/carritocompra.png"></a>
+            <a class="nav-link active" aria-current="page" href="../pages/pedidos.html">Pedidos Online<img
+                src="../img/carritocompra.png"></a>
 
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../pages/llegar.html">Cómo llegar<img src="../img/direccion.png"></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../pages/descuentos.html">Descuentos Exclusivos<img src="../img/banco.png"></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="../pages/api.html">Contactanos<img src="../img/contacto.png"></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" aria-disabled="true">X</a>
-      </li>
-    </ul>
-  </div>
-  </div>
-</nav>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/llegar.html">Cómo llegar<img src="../img/direccion.png"></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/descuentos.html">Descuentos Exclusivos<img src="../img/banco.png"></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="../pages/api.html">Contactanos<img
+                src="../img/contacto.png"></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" aria-disabled="true">X</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
 
   <div id="colores">
-  <header>
-    <h1 class="centrado">PEDIDOS ONLINE</h1>
-    <h2 class="centrado">Cargás la receta y te lo llevamos.</h2>
-  </header>
+    <header>
+      <h1 class="centrado">PEDIDOS ONLINE</h1>
+      <h2 class="centrado">Cargás la receta y te lo llevamos.</h2>
+    </header>
 
-  
-  <div class="catalogo">
-    <div class="producto">
+
+    <div class="catalogo">
+      <div class="producto">
         <img src="../img/producto1.jpg" alt="Producto 1" width="50%" height="50%">
         <h3>Actron</h3>
         <p>Antiinflamatorio no esteroideo para aliviar el dolor y la fiebre.</p>
         <p>Precio: $1000</p>
         <button>Comprar</button>
-    </div>
-    <div class="producto">
+      </div>
+      <div class="producto">
         <img src="../img/producto2.jpg" alt="Producto 2" width="50%" height="50%">
         <h3>Paracetamol</h3>
         <p>Analgésico y antipirético para reducir la fiebre y aliviar el dolor.</p>
         <p>Precio: $700</p>
         <button>Comprar</button>
-    </div>
-    <div class="producto">
+      </div>
+      <div class="producto">
         <img src="../img/producto3.jpg" alt="Producto 3" width="50%" height="50%">
         <h3>Aspirina</h3>
         <p>Alivia el dolor, reduce la fiebre y preveiene la formación de coágulos sanguíneos.</p>
         <p>Precio: $1000</p>
         <button>Comprar</button>
-    </div>
-    <div class="producto">
+      </div>
+      <div class="producto">
         <img src="../img/producto4.jpg" alt="Producto 4" width="50%" height="50%">
         <h3>Aerotina</h3>
         <p>Antihistamínico para aliviar los síntomas de las alergias, como la congestión nasal.</p>
         <p>Precio: $500</p>
         <button>Comprar</button>
-    </div>
-    <div class="producto">
+      </div>
+      <div class="producto">
         <img src="../img/producto5.jpg" alt="Producto 5" width="50%" height="50%">
         <h3>Alernix</h3>
         <p>Antihistamínico para tratar las alergias y sus síntomas</p>
         <p>Precio: $400</p>
         <button>Comprar</button>
-    </div>
-    <div class="producto">
+      </div>
+      <div class="producto">
         <img src="../img/producto6.jpg" alt="Producto 6" width="50%" height="50%">
         <h3>Ranitidina</h3>
         <p>Para reducir la acidez estomacal y el reflujo ácido.</p>
         <p>Precio: $1200</p>
         <button>Comprar</button>
+      </div>
     </div>
-</div>
 
-<div class="formulario-pedido">
-    <h2>Formulario de Pedido</h2>
-    <form action="#" method="post">
+    <div class="formulario-pedido">
+      <h2>Formulario de Pedido</h2>
+      <form action="#" method="post">
         <label for="producto">Producto:</label>
         <select id="producto" name="producto">
-            <option value="producto1">Actron</option>
-            <option value="producto2">Paracetamol</option>
-            <option value="producto3">Aspirina</option>
-            <option value="producto4">Aerotina</option>
-            <option value="producto5">Alernix</option>
-            <option value="producto6">Ranitidina</option>
+          <option value="producto1">Actron</option>
+          <option value="producto2">Paracetamol</option>
+          <option value="producto3">Aspirina</option>
+          <option value="producto4">Aerotina</option>
+          <option value="producto5">Alernix</option>
+          <option value="producto6">Ranitidina</option>
         </select>
 
         <label for="cantidad">Cantidad:</label>
@@ -119,37 +121,40 @@
         <textarea id="direccion" name="direccion" rows="4" required></textarea>
 
         <input type="submit" value="Enviar Pedido">
-    </form>
-</div>
+      </form>
+    </div>
 
-  <div class="margenes">
-
-
-  <p>ENVIAS TU PEDIDO POR WHATSAPP <br>
-    Podés cargar la receta si es necesario.</p><br>
-  <p>PREPARAMOS TU PAQUETE <br>
-    Y nos ponemos en contacto.</p><br>
-  <p>TE LO LLEVAMOS A TU CASA<br>
-    Y podés pagar con tarjeta en la puerta.</p> <br>
-
-  <p>Pedí por <a class="redsoc" href="https://wa.me/541154110787?text=Gracias por contactarnos, por favor cargá la receta y en breve nos estamos comunicando"
-      target="_blank"><img src="../img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
-  </p></a>
-  </div>
+    <div class="margenes">
 
 
-  <footer>
-    <p>© Copyright 2023</p>
-    <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
-    <p>Horarios de atencion: Lunes a Viernes de 8:00 a 12:30 y 16:30 a 20:00 hs. Sábados 9:00 a 12:30 y 16:30 a 20:00 hs</p>
-    <p>Tel:(02229)493789 email: fcialaplaza@c3l.com.ar</p>
-     <p><a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img
-          src="../img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487</p> 
-  </footer>
+      <p>ENVIAS TU PEDIDO POR WHATSAPP <br>
+        Podés cargar la receta si es necesario.</p><br>
+      <p>PREPARAMOS TU PAQUETE <br>
+        Y nos ponemos en contacto.</p><br>
+      <p>TE LO LLEVAMOS A TU CASA<br>
+        Y podés pagar con tarjeta en la puerta.</p> <br>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
+      <p>Pedí por <a class="redsoc"
+          href="https://wa.me/541154110787?text=Gracias por contactarnos, por favor cargá la receta y en breve nos estamos comunicando"
+          target="_blank"><img src="../img/whatsapp-line.png"
+            class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
+      </p></a>
+    </div>
+
+
+    <footer>
+      <p>© Copyright 2023</p>
+      <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
+      <p>Horarios de atencion: Lunes a Viernes de 8:00 a 12:30 y 16:30 a 20:00 hs. Sábados 9:00 a 12:30 y 16:30 a 20:00
+        hs</p>
+      <p>Tel:(02229)493789 email: fcialaplaza@c3l.com.ar</p>
+      <p><a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img src="../img/whatsapp-line.png"
+            class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"></script>
 
 </body>
 
