--- a/ProyectoCaC/pages/llegar.html
+++ b/ProyectoCaC/pages/llegar.html
@@ -13,7 +13,7 @@
 
 <body>
   <!-- Nav bar -->
-<nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark"">
+  <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark"">
     <div class=" container-fluid">
     <a class="navbar-brand" href="../index.html"><img src="../img/home.png"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -44,39 +44,41 @@
     </div>
   </nav>
 
-<!-- Encabezado -->
-<header>
-<div class="flex-container">
-    <div><img src="../img/comollegar.png" width="120"></div>
+  <!-- Encabezado -->
+  <header>
+    <div class="flex-container">
+      <div><img src="../img/comollegar.png" width="120"></div>
       <div>
-      <h1 class="centrado">Cómo llegar a nuestro local</h1>
-      <p class="centrado-parrafo">C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
+        <h1 class="centrado">Cómo llegar a nuestro local</h1>
+        <p class="centrado-parrafo">C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
       </div>
-</div>
-</header>
+    </div>
+  </header>
 
-<!-- Imagen con dirección de la farmacia -->
-<div class="contenedor"
+  <!-- Imagen con dirección de la farmacia -->
+  <div class="contenedor">
   <img class="borde-imagen">
-    <a href="https://www.google.com/maps/place/Farmacia+Plaza+La+Carolina+S.C.S./@-34.8722199,-58.2113619,15z/data=!3m1!4b1!4m10!1m2!2m1!1sfarmacia+plaza+carolina!3m6!1s0x95a2d78361fc4327:0x4a3eb5bb7d8c282f!8m2!3d-34.8722389!4d-58.1929079!15sChdmYXJtYWNpYSBwbGF6YSBjYXJvbGluYVoZIhdmYXJtYWNpYSBwbGF6YSBjYXJvbGluYZIBCHBoYXJtYWN54AEA!16s%2Fg%2F1tf6szmb?entry=ttu"><img
-        src="../img/llegar.jpeg" alt="Imagen de direccion" width="800"></a>
-    </img>
+  <a
+    href="https://www.google.com/maps/place/Farmacia+Plaza+La+Carolina+S.C.S./@-34.8722199,-58.2113619,15z/data=!3m1!4b1!4m10!1m2!2m1!1sfarmacia+plaza+carolina!3m6!1s0x95a2d78361fc4327:0x4a3eb5bb7d8c282f!8m2!3d-34.8722389!4d-58.1929079!15sChdmYXJtYWNpYSBwbGF6YSBjYXJvbGluYVoZIhdmYXJtYWNpYSBwbGF6YSBjYXJvbGluYZIBCHBoYXJtYWN54AEA!16s%2Fg%2F1tf6szmb?entry=ttu"><img
+      src="../img/llegar.jpeg" alt="Imagen de direccion" width="800"></a>
+  </img>
   </div>
 
-<!-- Footer -->
-<footer>
-      <p>© Copyright 2023</p>
-      <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
-      <p>Horarios de atencion: Lunes a Viernes de 8:00 a 12:30 y 16:30 a 20:00 hs. Sábados 9:00 a 12:30 y 16:30 a 20:00 hs</p>
-      <p>Tel:(02229)493789 email: fcialaplaza@c3l.com.ar
-        <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img
-            src="../img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
-</footer>
+  <!-- Footer -->
+  <footer>
+    <p>© Copyright 2023</p>
+    <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
+    <p>Horarios de atencion: Lunes a Viernes de 8:00 a 12:30 y 16:30 a 20:00 hs. Sábados 9:00 a 12:30 y 16:30 a 20:00 hs
+    </p>
+    <p>Tel:(02229)493789 email: fcialaplaza@c3l.com.ar
+      <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img src="../img/whatsapp-line.png"
+          class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
+  </footer>
 
-<!-- Script de bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-crossorigin="anonymous"></script>
+  <!-- Script de bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 
 </body>
 
