logo whatsapp index

--- a/ProyectoCaC/index.html
+++ b/ProyectoCaC/index.html
@@ -105,7 +105,7 @@
     <p>Horarios de atencion: Lunes a Viernes de 8:00 a 12:30 y 16:30 a 20:00 hs. Sábados 9:00 a 12:30 y 16:30 a 20:00 hs</p>
     <p>Tel:(02229)493789 email: fcialaplaza@c3l.com.ar
       <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img
-          src="../ProyectoCaC/img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487</p>
+          src="img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487</p>
 </footer>
 
 <!-- Script de bootstrap -->
