Orden y arreglo de index

--- a/ProyectoCaC/index.html
+++ b/ProyectoCaC/index.html
@@ -8,8 +8,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-  <script src="https://fontawesome.com/icons/whatsapp?" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/style.css">
+    <!-- Script de bootstrap -->
+  <script src="https://fontawesome.com/icons/whatsapp?" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+crossorigin="anonymous"></script>
+  
 </head>
 
 <body>
@@ -105,14 +110,8 @@
     <p>Horarios de atencion: Lunes a Viernes de 8:00 a 12:30 y 16:30 a 20:00 hs. Sábados 9:00 a 12:30 y 16:30 a 20:00 hs</p>
     <p>Tel:(02229)493789 email: fcialaplaza@c3l.com.ar
       <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img
-          src="../ProyectoCaC/img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487</p>
+          src="img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487</p>
 </footer>
 
-<!-- Script de bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-crossorigin="anonymous"></script>
-  
 </body>
-
 </html>
