--- a/pages/api.html
+++ b/pages/api.html
@@ -14,7 +14,7 @@
 integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
 crossorigin="anonymous"></script>
 <!-- Script de JS -->
-<script src="validacion.js"></script>
+<script src="/js/validacion.js"></script>
 </head>
 
 <body>
