--- a/ProyectoCaC/index.html
+++ b/ProyectoCaC/index.html
@@ -33,6 +33,10 @@
           <li class="nav-item">
             <a class="nav-link" href="pages/descuentos.html">Descuentos Exclusivos<img src="img/banco.png"></a>
           </li>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="pages/productos.html">Producto</a>
+        </li>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="pages/api.html">Contactanos<img src="img/contacto.png"></a>
           </li>
